# abyss

./: .clang-format  .gitignore  .travis.yml  CITATION.bib  CITATION.md  COPYRIGHT  ChangeLog  Dockerfile  LICENSE  Makefile  Makefile.am  README  README.css  README.md  autogen.sh  azure-pipelines.yml  circle.yml  configure.ac  doxygen.conf  index.html  params.json
ABYSS/: Abyss.cpp  Abyss.h  Makefile.am  Path.cpp  Path.h  PathDriver.cpp  PathDriver.h  abyss.cc
AdjList/: AdjList.cpp  Makefile.am
Align/: Aligner.cpp  Aligner.h  AlignmentCache.cpp  AlignmentCache.h  Makefile.am  Options.h  SAM.h  align.cc  alignGlobal.cc  alignGlobal.h  dialign.cpp  dialign.h  dna_diag_prob.cc  mergepairs.cc  needleman_wunsch.cpp  needleman_wunsch.h  smith_waterman.cpp  smith_waterman.h
Assembly/: AdjacencyAlgorithm.h  AssembleAlgorithm.h  AssemblyAlgorithms.cc  AssemblyAlgorithms.cpp  AssemblyAlgorithms.h  BranchGroup.cc  BranchGroup.cpp  BranchGroup.h  BranchRecord.cpp  BranchRecord.h  BranchRecordBase.h  BubbleAlgorithm.h  CoverageAlgorithm.h  DBG.h  DotWriter.cpp  DotWriter.h  ErodeAlgorithm.h  ISequenceCollection.h  KmerData.h  LoadAlgorithm.h  Makefile.am  Options.cc  Options.cpp  Options.h  PackedSeq.cpp  PackedSeq.h  SeqExt.cc  SeqExt.h  SequenceCollection.cpp  SequenceCollection.h  SplitAlgorithm.h  TrimAlgorithm.h  VertexData.h
Bloom/: Bloom.cpp  Bloom.h  BloomFilter.h  BloomFilterWindow.h  CascadingBloomFilter.h  CascadingBloomFilterWindow.h  ConcurrentBloomFilter.h  HashAgnosticCascadingBloom.h  KonnectorBloomFilter.h  Makefile.am  RollingBloomDBGVisitor.h  bloom.cc
BloomDBG/: AssemblyCounters.h  AssemblyParams.h  AssemblyStreams.h  BloomIO.h  Checkpoint.h  HashAgnosticCascadingBloom.h  LightweightKmer.h  Makefile.am  MaskedKmer.h  RollingBloomDBG.h  RollingHash.h  RollingHashIterator.h  SpacedSeed.h  bloom-dbg.cc  bloom-dbg.h
Common/: AffixIterator.h  Algorithms.h  Alignment.h  AssemblyAlgorithms.cpp  AssemblyAlgorithms.h  AssemblyData.cpp  AssemblyData.h  BitUtil.h  BitUtils.h  BloomFilterBase.h  BranchGroup.cpp  BranchGroup.h  BranchRecord.cpp  BranchRecord.h  CommonDefs.h  CommonUtils.cpp  CommonUtils.h  Config.cpp  Config.h  ConstString.h  ContigID.cpp  ContigID.h  ContigLength.cpp  ContigLength.h  ContigNode.cpp  ContigNode.h  ContigPath.cpp  ContigPath.h  ContigProperties.h  DBGBloom.h  DBGBloomAlgorithms.h  Dictionary.h  Estimate.h  Exception.h  Fcntl.cpp  Fcntl.h  Fcontrol.cpp  Fcontrol.h  Functional.h  Hash.h  (+70 more)
Consensus/: Consensus.cpp  Makefile.am
DAssembler/: DAssembler.cpp  Makefile.am  RotatedRead.cpp  RotatedRead.h  Rotation.h  fake_make.sh  makefile
DataBase/: DB.cc  DB.h  DB_config.cc  Makefile.am  Options.h  StatQueries.h  abyss-db-txt  abyss-db-viewer  db-csv.cc
DataLayer/: DotWriter.cpp  DotWriter.h  FastaConcat.h  FastaIndex.h  FastaInterleave.h  FastaReader.cpp  FastaReader.h  FastaWriter.cpp  FastaWriter.h  FastqReader.cpp  FastqReader.h  HDF5Interface.cpp  HDF5Interface.h  IFileReader.h  IFileWriter.h  ISequenceCollection.h  Makefile.am  NetCDFInterface.cpp  NetCDFInterface.h  Options.cpp  Options.h  PackedSeqReader.cpp  PackedSeqReader.h  PackedSeqWriter.cpp  PackedSeqWriter.h  Reader.cpp  Reader.h  SequenceCollection.cpp  SequenceCollection.h  SequenceCollectionHash.cpp  SequenceCollectionHash.h  Uncompress.cpp  Writer.cpp  Writer.h  abyss-tofastq.cc  fac.cc
DistanceEst/: AlignExtractor.cpp  AlignExtractor.h  DistanceEst.cpp  MLE.cpp  MLE.h  Makefile.am
ExpPaired/: ContigData.cpp  ContigData.h  ContigPath.cpp  ContigPath.h  Estimate.h  ExpPaired.cpp  ExpPaired.h  Makefile.am  Makefile.in  NodeScores.cpp  NodeScores.h  PairUtils.cpp  PairUtils.h  PairedAlgorithms.cpp  PairedAlgorithms.h  ParentTree.cpp  ParentTree.h  Stats.cpp  Stats.h  VisitAlgorithms.cpp  VisitAlgorithms.h
FMIndex/: BitArrays.h  DAWG.h  FMIndex.cc  FMIndex.h  Makefile.am  abyss-dawg.cc  bit_array.cc  bit_array.h  construct.cc  count.cc  sais.h  sais.hxx  search.cc  wat_array.cc  wat_array.h
FilterGraph/: FilterGraph.cc  FilterGraph.cpp  Makefile.am
GapFiller/: Makefile.am  gapfill.cpp  gapfill.h
GapFiller2/: Makefile.am  gapfiller2.cc
Graph/: AdjIO.h  AllPathsSearch.h  AsqgIO.h  Assemble.h  BidirectionalBFS.h  BidirectionalBFSVisitor.h  BreadthFirstSearch.h  ConstrainedBFSVisitor.h  ConstrainedBidiBFSVisitor.h  ConstrainedSearch.cpp  ConstrainedSearch.h  ContigGraph.cpp  ContigGraph.h  ContigGraphAlgorithms.cpp  ContigGraphAlgorithms.h  DefaultColorMap.h  DepthFirstSearch.h  DirectedGraph.h  DirectedGraphImpl.h  DistIO.h  DotIO.h  ExtendPath.h  FastaIO.h  GfaIO.h  Graph.h  GraphAlgorithms.h  GraphIO.h  GraphUtil.h  HashGraph.h  Makefile.am  MapGraph.h  Options.h  Path.h  PopBubbles.h  Properties.h  SAMIO.h  UndirectedGraph.h  VisitAlgorithms.cpp  VisitAlgorithms.h  adjtodot.cc  (+2 more)
KAligner/: Aligner.h  Barrier.h  KAligner.cpp  Makefile.am  Pipe.h  PipeMux.h  Semaphore.h
Konnector/: BloomFilterBase.h  CountingBloomFilterWindow.h  DBGBloom.h  DBGBloomAlgorithms.h  Makefile.am  README.md  RollingBloomDBGVertexSet.h  bloom.cc  konnector.cc  konnector.h
LogKmerCount/: CountingBloomFilter.h  Makefile.am  logcounter.cc  plc.h  plc_strand.h
Map/: Makefile.am  index.cc  map.cc  overlap.cc
MergePaths/: Makefile.am  MergeContigs.cpp  MergePaths.cpp  PathConsensus.cpp
Paired/: Makefile.am  PairedAbyss.cpp  PairedAbyss.h
PairedDBG/: AdjacencyAlgorithm.h  AssembleAlgorithm.h  AssemblyAlgorithms.cc  AssemblyAlgorithms.h  BranchGroup.cc  BranchGroup.h  BranchRecord.cc  BranchRecord.h  BubbleAlgorithm.h  CoverageAlgorithm.h  Dinuc.h  DotWriter.cc  DotWriter.h  ErodeAlgorithm.h  ISequenceCollection.h  KmerData.h  KmerPair.cc  KmerPair.h  KmerPairData.h  LoadAlgorithm.h  Makefile.am  Options.cc  Options.h  PairedDBGAlgorithms.h  SequenceCollection.cc  SequenceCollection.h  SplitAlgorithm.h  TrimAlgorithm.h  abyss-paired-dbg.cc
Parallel/: CommLayer.cpp  CommLayer.h  DistributedPhaseSpace.cpp  DistributedPhaseSpace.h  Makefile.am  MessageBuffer.cpp  MessageBuffer.h  Messages.cpp  Messages.h  NetworkDefs.h  NetworkSequenceCollection.cpp  NetworkSequenceCollection.h  (+9 more)
(+433 files in other folders)
