noinst_LIBRARIES = libassembly.a

libassembly_a_CPPFLAGS = -I$(top_srcdir)

libassembly_a_SOURCES = \
	AssemblyAlgorithms.cc AssemblyAlgorithms.h \
	BranchGroup.h \
	BranchRecord.h \
	BranchRecordBase.h \
	DBG.h \
	DotWriter.h \
	Options.cc Options.h \
	SequenceCollection.h \
	VertexData.h \
	AdjacencyAlgorithm.h \
	AssembleAlgorithm.h \
	BubbleAlgorithm.h \
	CoverageAlgorithm.h \
	ErodeAlgorithm.h \
	LoadAlgorithm.h \
	SeqExt.h \
	SplitAlgorithm.h \
	TrimAlgorithm.h

libassembly_a_LIBADD = $(top_builddir)/Common/libcommon.a
