noinst_LIBRARIES = libcommon.a

libcommon_a_CPPFLAGS = -I$(top_srcdir)

libcommon_a_SOURCES = \
	Algorithms.h \
	ConstString.h \
	ContigID.h ContigID.cpp \
	ContigLength.h ContigLength.cpp \
	ContigNode.h \
	ContigPath.h \
	ContigProperties.h \
	Dictionary.h \
	Estimate.h \
	Fcontrol.cpp Fcontrol.h \
	HashFunction.cpp HashFunction.h \
	HashMap.h \
	Histogram.cpp Histogram.h \
	Iterator.h \
	Kmer.cpp Kmer.h \
	Log.cpp Log.h \
	Options.cpp Options.h \
	PDF.h \
	SeqExt.cpp SeqExt.h \
	Sense.h \
	Sequence.cpp Sequence.h \
	SignalHandler.cpp SignalHandler.h \
	StringUtil.h \
	Timer.cpp Timer.h \
	Uncompress.cpp Uncompress.h
