noinst_LIBRARIES = libcommon.a

libcommon_a_CPPFLAGS = -I$(top_srcdir)

libcommon_a_SOURCES = \
	Algorithms.h \
	Alignment.h \
	BitUtil.h \
	ConstString.h \
	ContigID.h ContigID.cpp \
	ContigNode.h \
	ContigPath.h \
	ContigProperties.h \
	Dictionary.h \
	Estimate.h \
	Fcontrol.cpp Fcontrol.h \
	Functional.h \
	HashFunction.h \
	Histogram.cpp Histogram.h \
	IOUtil.h \
	Iterator.h \
	Kmer.cpp Kmer.h \
	Log.cpp Log.h \
	MemoryUtil.h \
	Options.cpp Options.h \
	PMF.h \
	SAM.h \
	Sense.h \
	SeqExt.cpp SeqExt.h \
	Sequence.cpp Sequence.h \
	SignalHandler.cpp SignalHandler.h \
	StringUtil.h \
	SuffixArray.h \
	Timer.cpp Timer.h \
	Uncompress.cpp Uncompress.h \
	UnorderedMap.h \
	cholesky.hpp \
	city.cc city.h
