noinst_LIBRARIES = libcommon.a

libcommon_a_CPPFLAGS = -I$(top_srcdir)

libcommon_a_SOURCES = \
	Algorithms.h \
	Alignment.h \
	BitUtil.h \
	ConstString.h \
	ContigID.h ContigID.cpp \
	ContigNode.h \
	ContigPath.h \
	ContigProperties.h \
	Dictionary.h \
	Estimate.h \
	Fcontrol.cpp Fcontrol.h \
	Functional.h \
	Hash.h \
	HashFunction.h \
	Histogram.cpp Histogram.h \
	InsOrderedMap.h \
	IOUtil.h \
	Iterator.h \
	Kmer.cpp Kmer.h \
	Log.cpp Log.h \
	MemoryUtil.h \
	Options.cpp Options.h \
	PMF.h \
	SAM.h \
	Sense.h \
	Sequence.cpp Sequence.h \
	SignalHandler.cpp SignalHandler.h \
	StringUtil.h \
	VectorUtil.h \
	SuffixArray.h \
	Timer.cpp Timer.h \
	Uncompress.cpp Uncompress.h \
	UnorderedMap.h \
	UnorderedSet.h \
	cholesky.hpp \
	KmerIterator.h \
	MemUtils.h \
	city.cc city.h
