noinst_LIBRARIES = libdatalayer.a

libdatalayer_a_CPPFLAGS = -I$(top_srcdir) \
	-I$(top_srcdir)/Common

libdatalayer_a_SOURCES = \
	FastaReader.cpp FastaReader.h \
	FastaWriter.cpp FastaWriter.h \
	ISequenceCollection.h \
	Options.cpp Options.h \
	PackedSeqReader.cpp PackedSeqReader.h \
	PackedSeqWriter.cpp PackedSeqWriter.h \
	SequenceCollectionHash.cpp SequenceCollectionHash.h
