noinst_LIBRARIES = libexppaired.a

libexppaired_a_CPPFLAGS = -I$(top_srcdir)/Common -I$(top_srcdir)/DataLayer \
	-I$(top_srcdir)/Parallel -I$(top_srcdir)/Align -I$(top_srcdir)/Graph
	

libexppaired_a_SOURCES = \
	NodeScores.cpp NodeScores.h \
	ParentTree.cpp ParentTree.h \
	ContigData.cpp ContigData.h \
	Stats.cpp Stats.h \
	PairedAlgorithms.cpp PairedAlgorithms.h \
	VisitAlgorithms.cpp VisitAlgorithms.h

